Fixed styles to allow overflow on main content area.

--- a/branches/japary/ruokapiiri.scss
+++ b/branches/japary/ruokapiiri.scss
@@ -40,7 +40,6 @@
 /* @group General */
 #ruokapiiri {
   width: 100%;
-  overflow: hidden;
   font-family: sans-serif;
   .watermark { color: #aaa; }
   p, ul, ol, dl, table {
